#24, #25 - Refactoring app to receive data from REST API instead of terminal

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@notionhq/client": "^0.3.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "google-auth-library": "^7.6.2",
     "googleapis": "^84.0.0"
   }
