--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest",
+    "test": "npx jest",
     "test:watch": "npx jest --watchAll",
     "test:cov": "npx jest --coverage"
   },
