--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
+      working-directory: ./server
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
