--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-    - uses: actions/setup-node@v2
-      working-directory: ./server
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+      working-directory: ./server
     - run: npm ci
     - run: npm test
