--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: server/package-lock.json
       
     - run: npm ci
     - run: npm test
