--- a/app/package.json
+++ b/app/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/ChristianGustavo/youtube-notion-integration/issues"
   },
-  "homepage": "https://github.com/ChristianGustavo/youtube-notion-integration#readme"
+  "homepage": "https://github.com/ChristianGustavo/youtube-notion-integration#readme",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.42.1"
+  }
 }
