--- a/.github/workflows/setup-app.yml
+++ b/.github/workflows/setup-app.yml
@@ -19,9 +19,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: app/package-lock.json
 
     - name: Build
       run: |
