--- a/.github/workflows/setup-app.yml
+++ b/.github/workflows/setup-app.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        gulp
+        npx gulp
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
