--- a/.github/workflows/setup-app.yml
+++ b/.github/workflows/setup-app.yml
@@ -26,9 +26,8 @@ jobs:
         cache-dependency-path: app/package-lock.json
 
     - name: Build
-      run: |
-        npm install
-        npx gulp
+    - run: npm ci
+    - run: npx gulp
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
