--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,8 @@
   "description": "An application for retrieve a playlist from YouTube and create a TODO list on Notion for each video.",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV='development' npx gulp",
+    "build": "npx gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
