--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@notionhq/client": "^0.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.6.2",
