--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
+    "dev": "node --inspect src/index.js",
     "test": "npx jest",
     "test:watch": "npx jest --watchAll",
     "test:cov": "npx jest --coverage"
