--- a/.github/workflows/setup-app.yml
+++ b/.github/workflows/setup-app.yml
@@ -27,6 +27,7 @@ jobs:
 
     - run: npm ci
     - run: npx gulp
+    - run: rm -rf sass/
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
