New GitHub action for deploy and test Angular app

--- a/client/angular.json
+++ b/client/angular.json
@@ -99,7 +99,16 @@
               "src/styles.scss"
             ],
             "scripts": []
-          }
+          },
+          "configurations": {
+            "production": {
+              "sourceMap": false,
+              "codeCoverage": true,
+              "browsers": "ChromeHeadless",
+              "watch": false
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
