--- a/.github/workflows/setup-client.yml
+++ b/.github/workflows/setup-client.yml
@@ -27,7 +27,7 @@ jobs:
 
     - run: npm ci
     - run: npm run test:prod
-    - run: npm run build:prod
+    - run: npm run build:prod -- --base-href /youtube-notion-integration/
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
