List page component
List page component will contain the cards, layouts, and will fetch the
data from the API.

--- a/client/angular.json
+++ b/client/angular.json
@@ -106,6 +106,12 @@
               "codeCoverage": true,
               "browsers": "ChromeHeadless",
               "watch": false
+            },
+            "development": {
+              "sourceMap": false,
+              "codeCoverage": true,
+              "browsers": "Chrome",
+              "watch": false
             }
           },
           "defaultConfiguration": "production"
